fixed game information section on mobile-view

--- a/dungeon-descent/src/styles/landing/LandingPage.css
+++ b/dungeon-descent/src/styles/landing/LandingPage.css
@@ -76,7 +76,7 @@ body {
 }
 
 .container {
-  max-width: 500px;
+  max-width: 1200px;
   margin-inline: auto;
   display: flex;
   justify-content: center;
@@ -191,20 +191,27 @@ body {
   }
 
   .info-block {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+  }
+
+  .info-block img {
+    margin: 0 0 20px 0;
+    max-width: 100%;
+  }
+
+  .info-block p {
+    margin-bottom: 20px;
+  }
+
+  /* Alternate text and image for mobile view */
+  .info-block:nth-child(odd) {
     flex-direction: column;
   }
 
-  .info-block img,
-  .info-block.reverse img {
-    margin: 0 0 20px 0;
-  }
-
-  .info-block.reverse {
+  .info-block:nth-child(even) {
     flex-direction: column-reverse;
-  }
-
-  .info-block.reverse img {
-    margin: 0 0 20px 0;
   }
 }
 
@@ -240,19 +247,26 @@ body {
   }
 
   .info-block {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+  }
+
+  .info-block img {
+    margin: 0 0 20px 0;
+    max-width: 100%;
+  }
+
+  .info-block p {
+    margin-bottom: 20px;
+  }
+
+  /* Alternate text and image for mobile view */
+  .info-block:nth-child(odd) {
     flex-direction: column;
   }
 
-  .info-block img,
-  .info-block.reverse img {
-    margin: 0 0 20px 0;
-  }
-
-  .info-block.reverse {
+  .info-block:nth-child(even) {
     flex-direction: column-reverse;
-  }
-
-  .info-block.reverse img {
-    margin: 0 0 20px 0;
   }
 }
